syntax = "proto3";
package zethchain.mining.v1;

import "amino/amino.proto";
import "cosmos/base/query/v1beta1/pagination.proto";
import "gogoproto/gogo.proto";
import "google/api/annotations.proto";
import "zethchain/mining/v1/params.proto";

option go_package = "zethchain/x/mining/types";

// Query defines the gRPC querier service.
service Query {
  // Parameters queries the parameters of the module.
  rpc Params(QueryParamsRequest) returns (QueryParamsResponse) {
    option (google.api.http).get = "/zethchain/mining/v1/params";
  }

  // MiningHistory queries the mining history of a specific address.
  rpc MiningHistory(QueryMiningHistoryRequest) returns (QueryMiningHistoryResponse) {
    option (google.api.http).get = "/zethchain/mining/v1/mining_history";
  }
}

// QueryParamsRequest is request type for the Query/Params RPC method.
message QueryParamsRequest {}

// QueryParamsResponse is response type for the Query/Params RPC method.
message QueryParamsResponse {
  // params holds all the parameters of this module.
  Params params = 1 [
    (gogoproto.nullable) = false,
    (amino.dont_omitempty) = true
  ];
}

// QueryMiningHistoryRequest is request type for the Query/MiningHistory RPC method.
message QueryMiningHistoryRequest {
  string address = 1;
}

// QueryMiningHistoryResponse is response type for the Query/MiningHistory RPC method.
message QueryMiningHistoryResponse {
  string last_mine_time = 1;  // Last mining timestamp (Unix seconds)
  string total_mined = 2;      // Total amount mined (uzeth)
  string mine_count = 3;       // Number of successful mines
}
